[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3"
poem-openapi = { version = "3.0", features = ["swagger-ui", "openapi-explorer"] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "macros",
  "chrono",
  "uuid",
  "json",
  "migrate",
] } 
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
num_cpus = "1.16"
auth0 = { path = "../auth0" }
reqwest = "0.11"
dotenvy = { version = "0.15", features = ["clap"] }
